--- a/templates/mytravel.html
+++ b/templates/mytravel.html
@@ -3,9 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col-6">
-            <h4 class="display-4 title-text">
-                {% print(travelDetails) %}
-            </h4>
+           {% print(travelDetails['bsd']) %}
         </div>
     </div>
 </div>
