--- a/templates/base.html
+++ b/templates/base.html
@@ -8,17 +8,20 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
         <!--font awesome icons-->
         <script src="https://kit.fontawesome.com/3ee76b7c99.js" crossorigin="anonymous"></script>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
         <!--custom CSS-->
         <link rel="stylesheet" href="../static/css/style.css">
         <title>Bus Route</title>
     </head>
 
     <body>
-        <div class="container">
-            <div class="row">
-                <h4 class="display-4 py-2 title-text">
-                    Bus Travel
-                </h4>
+        <div class="container-fluid header-block">
+            <div class="container">
+                <div class="row">
+                    <h4 class="display-4 py-2 title-text">
+                        Bus Travel
+                    </h4>
+                </div>
             </div>
         </div>
         {% block content %}{% endblock %}
