--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,21 @@
             <form method="POST">
                 <div class="form-group">
                   <label for="source">Start Location</label>
-                  <input type="text" class="form-control" id="source" name="source" placeholder="Enter where you are">
+                  <select class="form-select" name="source" aria-label="Default select example">
+                    <option value="" selected>select where you are</option>
+                    {% for place in places:%}
+                      <option value="{{place}}">{{place}}</option>
+                    {% endfor %}
+                  </select>
                 </div>
                 <div class="form-group">
                   <label for="destination">End location</label>
-                  <input type="text" class="form-control" id="destination" name="destination" placeholder="Enter where you want to go">
+                  <select class="form-select" name="destination" aria-label="Default select example">
+                    <option value="" selected>select where you want to reach</option>
+                    {% for place in places:%}
+                      <option value="{{place}}">{{place}}</option>
+                    {% endfor %}
+                  </select>
                 </div>
                 <button type="submit" class="btn btn-primary mt-3">Get Bus Sequence</button>
             </form>
