--- a/templates/mytravel.html
+++ b/templates/mytravel.html
@@ -29,7 +29,7 @@
                         <div class="flag-wrapper">
                             <span class="flag">{{travelDetails['bsd'][-1][-1].title()}}</span>
                         </div>
-                        <div class="desc">Your destination has been reached.</div>
+                        <div class="desc">Your destination would have been reached.</div>
                     </div>
                 </li>
             </ul>
